@@ -1,5 +1,12 @@
 $Id$
             
+2007-08-16: base.lisp: Fixed bug in 'build-symbol' whereby package arg
+              was not evaluated!  (Manual was right, code wrong.)
+              Defined 'endtail', a synonym for 'last' with args
+              reversed.
+            setter.lisp: Used end-tail to avoid using two-arg 'last'
+              and causing problems in Nisp code.
+
             [- Version 2.1.37 -]
 2007-06-29: datafun.lisp: Fixed unfoundedness due to implict use of 
             macro-hooks* before it is defined.
